float_eq/tests/derive_tests/float_eq_all/float_eq_all_duplicate_tol.stderr
error: Duplicate `all_tol` argument
 --> $DIR/float_eq_all_duplicate_tol.rs:7:5
  |
7 |     all_tol = "Tol2"
  |     ^^^^^^^
